--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,13 +21,13 @@ jobs:
       - name: Test
         env:
           GO111MODULE: "on"
-        run: |
-          export PATH=${PATH}:$(go env GOPATH)/bin
+        run: >
+          export PATH=${PATH}:$(go env GOPATH)/bin &&
           (cd socks &&
-            golangci-lint run --disable-all --deadline=10m
-            --enable=gofmt
-            --enable=golint
-            --enable=vet
-            --enable=gosimple
-            --enable=unconvert
-            --enable=ineffassign)
+          golangci-lint run --disable-all --deadline=10m
+          --enable=gofmt
+          --enable=golint
+          --enable=vet
+          --enable=gosimple
+          --enable=unconvert
+          --enable=ineffassign)
